apps/home-automation/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:	
    app.kubernetes.io/instance: home-automation-mealie	
    app.kubernetes.io/name: mealie	
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 10
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-automation-mealie	
      app.kubernetes.io/name: mealie	
  template:
    metadata:
      name: mealie
      labels:	
        app.kubernetes.io/instance: home-automation-mealie	
        app.kubernetes.io/name: mealie	
    spec:
      containers:
        - name: mealie
          image: docker.io/wimdegroot/mealie:test-v5
          ports:
            - containerPort: 9000
              name: web
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1000Mi
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
            - mountPath: /etc/tls
              name: mealie-tls
            - mountPath: /etc/trust
              name: keycloak-tls
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: / 
              port: 9000 
              scheme: HTTPS
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9000
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 9000
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 3
      restartPolicy: Always
      volumes:
        - name: mealie-data
          emptyDir: {}
        - name: mealie-tls
          secret:
            secretName: mealie-tls
        - name: keycloak-tls
          configMap:
            name: keycloak.wimandnaomishome.com
