apps/home-automation/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    argocd.argoproj.io/instance: home-automation-mealie
    app.kubernetes.io/instance: home-automation-mealie	
    app.kubernetes.io/name: mealie	
spec:
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 80 
      targetPort: web
  selector:	
    app.kubernetes.io/name: mealie
