apps/home-automation/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 4546b
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: mealie
  namespace: home-automation 
spec:
  rules:
    - host: mealie.united
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  name: web 
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - mealie.united
      secretName: mealie.united-tls
